// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionNoteScreenTemplate renders correctly with empty note 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            {
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      >
        <TextInput
          multiline={true}
          onBlur={[MockFunction]}
          onChangeText={[MockFunction]}
          style={
            [
              {
                "alignSelf": "stretch",
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 18,
                "lineHeight": 18,
              },
              {
                "width": 0,
              },
            ]
          }
          value=""
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`SessionNoteScreenTemplate renders correctly with note content 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            {
              "marginLeft": 0,
              "marginRight": 0,
            },
          ]
        }
      >
        <TextInput
          multiline={true}
          onBlur={[MockFunction]}
          onChangeText={[MockFunction]}
          style={
            [
              {
                "alignSelf": "stretch",
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 18,
                "lineHeight": 18,
              },
              {
                "width": 0,
              },
            ]
          }
          value="Had a vivid dream about flying."
        />
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
